[package]
build = "build.rs"
edition = "2021"
name = "pb-devtools-client"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
pico-args = "0.5.0"
prost = "0.12"
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.11"


[features]
sdk-5-19 = []
sdk-6-5 = []
