[package]
build = "build.rs"
edition = "2021"
name = "pb-devtools-daemon"
rust-version = "1.76"
version = "0.1.0"

[dependencies]
async-trait = "0.1.77"
daemonize = "0.5.0"
embedded-graphics = "0.8.1"
futures = "0.3.30"
inkview = { path = "../inkview" }
inkview-eg = { path = "../inkview-eg" }
lockfile = "0.4.0"
once_cell = "1.0"
pb-devtools = { path = "../pb-devtools" }
portable-pty = "0.8.1"
prost = "0.12"
redlight = { path = "../../../redlight" }
russh = { git = "https://github.com/warp-tech/russh", rev = "f1985e14bfb56dba93ba0c70db234bf2b888e35e" }
russh-keys = { git = "https://github.com/warp-tech/russh", rev = "f1985e14bfb56dba93ba0c70db234bf2b888e35e" }
signal-hook = "0.3.17"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = "0.11"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.11"

[features]
sdk-5-19 = ["inkview/sdk-5-19"]
sdk-6-5 = ["inkview/sdk-6-5"]
